# pyjet

./: .gitignore  .travis.yml  MANIFEST.in  Makefile  README.rst  azure-pipeline-build.yml  environment.yml  example.py  install-fastjet.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py
.ci/: azure-pipeline-build.yml  build-requirements.txt  dev-requirements.txt  test-requirements.txt  variables.yml
.ci/azure-wheel-helpers/: README.md  azure-pipeline-build-unixonly.yml  variables.yml
.github/: dependabot.yml
.github/workflows/: main.yml  wheels.yml
examples/: example.py  plot_jet_areas.py
notebooks/: PyjetDemo.ipynb  pyjet
pyjet/: __init__.py  _version.py  utils.py
pyjet/src/: FastJet.pxi  FastJet.pyx  _libpyjet.cpp  _libpyjet.pyx  core.h  fastjet.h  fastjet.pxd  fjcore.cpp  fjcore.h
pyjet/testdata/: __init__.py
pyjet/tests/: test_cluster.py  test_utils.py
tests/: test_cluster.py  test_pseudojet.py
