[metadata]
name = pyjet
version = file: pyjet/VERSION.txt
description = The interface between FastJet and NumPy
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Noel Dawe
author_email = noel@dawe.me
maintainer = The Scikit-HEP admins
maintainer_email = scikit-hep-admins@googlegroups.com
license = GPLv3
url = https://github.com/scikit-hep/pyjet
classifiers =
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Topic :: Software Development
    Topic :: Scientific/Engineering
    Operating System :: Unix
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: PyPy
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: C++
    Programming Language :: Cython
    Development Status :: 6 - Mature


[options]
zip_safe = False
python_requires = >=3.7
packages = find:
include_package_data = True
install_requires =
    numpy >=1.13.3
    importlib_resources >= 1.1; python_version<"3.9"

[options.packages.find]
exclude =
    tests
